--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<version>4.4.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.everit.json</groupId>
+			<artifactId>org.everit.json.schema</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.0</version>
